Round 7 review: DataSource NPE + SNAPSHOT doc + FF-aware asserts
- DataSource.toUnencryptedMap/toPresentationMap: Collections.unmodifiableMap
  instead of Map.copyOf (Map.copyOf rejects null values; settings may carry
  null). NPE observed by jfreden in review.
- DataSource.toXContent Javadoc: drop stale SNAPSHOT reference; context is
  GATEWAY-only since round 5.
- ProjectMetadataTests, SimpleIndexTemplateIT, DataStreamIT: make message
  assertions FF-aware so they pass in both snapshot (FF on) and release
  (FF off) builds. Preamble helpers in ProjectMetadataTests, inline
  ternaries in the two IT files (small blast radius).